--- a/src/app/pages/sign-in/sign-in.component.html
+++ b/src/app/pages/sign-in/sign-in.component.html
@@ -27,9 +27,12 @@
         </mat-form-field>
         <br/>
         <br/>
-        <button mat-raised-button color="primary" [disabled]="(email.invalid || nome.invalid || usuario.invalid || senha.invalid) || salvando" >Cadastrar</button>
+        <div>
+          <button mat-raised-button color="primary" [disabled]="(email.invalid || nome.invalid || usuario.invalid || senha.invalid) || salvando">Cadastrar</button>
+          <mat-spinner class="spinner" diameter="25" *ngIf="salvando"></mat-spinner>
+        </div>
+
         <br/>
-        <mat-progress-bar color="primary" mode="indeterminate"></mat-progress-bar>
         <br/>
         <br/>
         <hr class="centerlink" />
