implement navbar info

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary"> 
   <mat-toolbar-row>
-    <span>Third Line</span>
+    <span>UBPConfig 2.0 - {{user.name}}</span>
     <span class="example-spacer"></span>
     <a><mat-icon class="example-icon" (click)="onSignOut()">input</mat-icon></a>
   </mat-toolbar-row>
