--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~bootstrap/dist/css/bootstrap.css"
+/*@import "~bootstrap/dist/css/bootstrap.css"*/
+.centerform{
+	width: 75% !important;
+	margin: 10px auto !important;
+	max-width: 60% !important;
+} 
+
+
