--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,6 +15,10 @@
         <!-- CADASTRO DE EMPRESA -->
         <a class="nav-link" routerLink="../cadastro-empresa">Cadastrar Empresa</a>
       </li>      
+      <li class="nav-item active">
+          <!-- CADASTRO DE EMPRESA -->
+          <a class="nav-link" routerLink="../cadastro-sistema">Cadastrar Sistema</a>
+      </li>
     </ul>
     <i class="fas fa-sign-out-alt" (click)="onSignOut()"></i>
   </div>
