--- a/src/app/pages/cadastro-sistema/cadastro-sistema.component.html
+++ b/src/app/pages/cadastro-sistema/cadastro-sistema.component.html
@@ -15,14 +15,7 @@
       <div class="invalid-feedback" [hidden]="descricao.valid || descricao.pristine">O campo Descrição é obrigatório!</div>
     </div>
 
-    <div class="form-group">
-      <select id="empresa" [ngClass]="getFormControlSelectClass(empresa.valid, empresa.pristine)" [formControl]="empresa">        
-        <option *ngFor="let emp of emps | async" value="{{emp.id}}">{{emp.nome}}</option>
-      </select>      
-      <div class="invalid-feedback" [hidden]="empresa.valid || empresa.pristine">É obrigatório selecionar uma empresa para ser vinculada ao sistema!</div>
-    </div>
-
-    <button type="submit" class="btn btn-primary btn-block" [disabled]="(nome.invalid || descricao.invalid || empresa.invalid) || salvando">Cadastrar
+    <button type="submit" class="btn btn-primary btn-block" [disabled]="(nome.invalid || descricao.invalid) || salvando">Cadastrar
       <i *ngIf="salvando" class="fa fa-circle-o-notch fa-spin" style="font-size:15px"></i>
     </button>
 
