--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,11 @@
 <app-navbar></app-navbar>
+<div class="centerform">
+    <div class="list-group">
+        <a *ngFor='let sistema of sistemas | async' class="list-group-item list-group-item-action flex-column align-items-start">
+            <div class="d-flex w-100 justify-content-between">
+                <h5 class="mb-1">{{sistema.nome}}</h5>
+            </div>
+            <p class="mb-1">{{sistema.descricao}}</p>
+        </a>
+    </div>
+</div>
