customer registration screen (in development)

--- a/src/app/pages/cadastro-cliente/cadastro-cliente.component.html
+++ b/src/app/pages/cadastro-cliente/cadastro-cliente.component.html
@@ -1,7 +1,6 @@
-<!-- <app-navbar></app-navbar>
+<app-navbar></app-navbar>
 <form (ngSubmit)="onSubmit(); $event.preventDefault()">
   <div class="container centerform">
-    
     <div class="form-group">
       <label for="nome">Nome:</label>
       <input type="text" id="nome" [ngClass]="getFormControlClass(nome.valid, nome.pristine)" placeholder="Nome" [formControl]="nome"
@@ -9,17 +8,28 @@
       <div class="invalid-feedback" [hidden]="nome.valid || nome.pristine">O campo Nome é obrigatório!</div>
     </div>
 
-    
     <div class="form-group">
-      <label for="email">E-mail:</label>
-      <input id="email" type="email" [ngClass]="getFormControlClass(email.valid, email.pristine)" placeholder="E-mail" [formControl]="email"
-        required></input>
+      <label for="email">Descrição:</label>
+      <input type="email" id="email" [ngClass]="getFormControlClass(email.valid, email.pristine)" placeholder="E-mail" [formControl]="email"
+        required />
       <div class="invalid-feedback" [hidden]="email.valid || email.pristine">O campo E-mail é obrigatório!</div>
     </div>
 
-    
+    <div class="form-group">
+      <label for="sistemas">Sistemas:</label>
+      <select class="custom-select" id="inputGroupSelect01">
+        <option selected>Choose...</option>
+        <option value="1">One</option>
+        <option value="2">Two</option>
+        <option value="3">Three</option>
+      </select>
 
-    <button type="submit" class="btn btn-primary btn-block" [disabled]="(nome.invalid || descricao.invalid) || salvando">Cadastrar
+      <!-- <input type="email" id="email" [ngClass]="getFormControlClass(email.valid, email.pristine)" placeholder="E-mail" [formControl]="email"
+        required /> -->
+      <!-- <div class="invalid-feedback" [hidden]="email.valid || email.pristine">O campo E-mail é obrigatório!</div> -->
+    </div>
+
+    <button type="submit" class="btn btn-primary btn-block" [disabled]="(nome.invalid || email.invalid) || salvando">Cadastrar Cliente
       <i *ngIf="salvando" class="fa fa-circle-o-notch fa-spin" style="font-size:15px"></i>
     </button>
 
@@ -31,4 +41,4 @@
       Erro ao cadastrar o sistema, tente novamente!
     </div>
   </div>
-</form> -->
+</form>
